<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_detail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/Gambar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo_apk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TeksId"
            android:layout_width="55dp"
            android:layout_height="37dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:text="@string/Id"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.972"
            app:layout_constraintStart_toStartOf="@+id/Gambar"
            app:layout_constraintTop_toTopOf="@+id/Gambar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/Gambar"
            app:layout_constraintEnd_toEndOf="@id/Gambar"
            app:layout_constraintTop_toBottomOf="@id/Gambar">

            <!-- TextViews di dalam LinearLayout -->
            <TextView
                android:id="@+id/Teksname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nama"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:background="@drawable/underline"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/TeksNohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nohp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:background="@drawable/underline"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/TeksLokasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lokasitujuan"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:background="@drawable/underline"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/TeksJumlahTiket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/JumlahTiket"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:background="@drawable/underline"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/TeksHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Harga"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:background="@drawable/underline"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/TeksTanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Tanggal"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:background="@drawable/underline"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>