<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_profile"
    tools:context=".Activity.ProfileActivity">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo_apk"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/settingImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/profile_setting"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="82dp"
        android:layout_height="81dp"
        android:layout_marginTop="56dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:src="@drawable/profile_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="ini nama"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/profileImage"
        app:layout_constraintStart_toStartOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="ini email"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/fullname"
        app:layout_constraintStart_toStartOf="@+id/fullname"
        app:layout_constraintTop_toBottomOf="@+id/fullname" />


    <ImageButton
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="-15dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/password_image_description"
        android:padding="8dp"
        android:src="@drawable/profile_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notif" />

    <ImageButton
        android:id="@+id/account"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="-15dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/account_image_description"
        android:padding="8dp"
        android:src="@drawable/profile_acc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <ImageButton
        android:id="@+id/notif"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="-15dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/notif_image_description"
        android:padding="8dp"
        android:src="@drawable/profile_notif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account" />

    <ImageButton
        android:id="@+id/addData"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="-15dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/add_data_image_description"
        android:padding="8dp"
        android:src="@drawable/profile_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language" />

    <ImageButton
        android:id="@+id/address"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="120dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/address_image_description"
        android:padding="8dp"
        android:src="@drawable/profile_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <ImageButton
        android:id="@+id/language"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="-15dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/language_image_description"
        android:padding="8dp"
        android:src="@drawable/profile_languange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageButton
        android:id="@+id/logout"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="-15dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/logout_image_description"
        android:padding="8dp"
        android:src="@drawable/profile_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addData" />

    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:id="@+id/chipNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:padding="4dp"
        app:cnb_menuResource="@menu/bottom_menu"
        app:cnb_iconSize="20dp"
        app:cnb_radius="10dp"
        app:cnb_orientationMode="horizontal"
        app:cnb_iconColor="@color/white"
        app:cnb_unselectedColor="@color/bluesky"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
